# Programs

./: .gitignore  A_1.cpp  A_Ahahahahahahahaha.cpp  A_Alternately.cpp  A_AvtoBus.cpp  A_Bits.cpp  A_Bitwise_Exclusive_Or.cpp  A_CAPS_LOCK.cpp  A_Circular_Local_MiniMax.cpp  A_Coin_Transformation.cpp  A_Consecutive_Sum_Riddle.cpp  A_Dislike_of_Threes.cpp  A_Double_Click.cpp  A_Filter.cpp  A_Hossam_and_Combinatorics.cpp  A_Insert_Digit.cpp  A_Integer_Diversity.cpp  A_LCM_Problem.cpp  A_Linear_Keyboard.cpp  A_Majority.cpp  A_Make_it_Beautiful.cpp  A_Minimal_Coprime.cpp  A_N_choice_question.cpp  A_New_World_New_Me_New_Array.cpp  A_Odd_Divisor.cpp  A_Odd_vs_Even.cpp  A_Pawn_on_a_Grid.cpp  A_Red_and_Blue_Beans.cpp  A_Regular_Bracket_Sequences.cpp  A_Serval_and_String_Theory.cpp  A_Skibidus_and_Amog_u.cpp  A_Stable_Arrangement_of_Rooks.cpp  A_String.cpp  A_Two_Frogs.cpp  A_Yet_Another_Two_Integers_Problem.cpp  A_wwwvvvvvv.cpp  Apple_Division.cpp  B_1_Wonderful_Coloring_1.cpp  B_ASCII_Art.cpp  B_Alphabetical_Strings.cpp  (+102 more)
.cph/: .A_1.cpp_b036869e57ef714f7ac761e04ea0aed9.prob  .A_Add_Plus_Minus_Sign.cpp_ee7f360af5d736830664bff762aa0f43.prob  .A_Addition.cpp_4f4fd4e19b7416a081ac362525da2f46.prob  .A_Ahahahahahahahaha.cpp_6f39af7e5b5b7791d191323697645e34.prob  .A_Alternately.cpp_0af696186b8511d9548b5a686fb53f8a.prob  .A_AvtoBus.cpp_f5731ffe9b2b4e43c6113dbe80c660e5.prob  .A_Bachgold_Problem.cpp_012b18f320cb366f5b10001afe474168.prob  .A_Bits.cpp_ec84d18d1c6241442e641387ee06ed61.prob  .A_Bits_Operation.cpp_5227084ff23306aadf21906fde2f9a4f.prob  (+158 more)
cpp_basics/: .palindrome.cpp.swp  capital  (+12 more)
(+241 files in other folders)
